kocc-v0.4.0/openshift/kocc-remote-readonly.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-portal-integration
